# pylon

./: .gitignore  Cargo.toml  Containerfile  PYLON-UPDATE.md  README.md  build.rs  devenv.nix  entrypoint.sh  flake.nix  package.json  tsconfig.json
.devenv/: nix-eval-cache.db-shm  nix-eval-cache.db-wal
.devenv/gc/: container-pylon-derivation-devenv-perSystem-x86_64-linux-config-containers-pylon-derivation
proto/: pylon.proto
src/: cli.rs  config.rs  config.ts  error.rs  jwt.rs  lib.rs  main.rs  main.ts  proxy.rs  stream.rs
src/api/: server.ts
src/db/: index.ts  mod.rs  models.rs  schema.sql  schema.ts
src/grpc/: generated.rs  mod.rs  service.rs
src/service/: chat.ts  logs.ts  permission.ts  proxy.ts  util.ts
src/web/: handlers.rs  mod.rs  templates.rs
templates/: dashboard.html  layout.html  login.html  logs.html  proxy_form.html  proxy_list.html
tests/: http_integration_test.rs  integration_test.rs  proxy_test.rs
