[package]
name = "pylon"
version = "0.1.0"
edition = "2021"
authors = ["OpenZerg Team"]
license = "MIT"

[lib]
name = "pylon"
path = "src/lib.rs"

[[bin]]
name = "pylon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
clap = { version = "4", features = ["derive"] }
tonic = "0.12"
prost = "0.13"
jsonwebtoken = "9.3"
once_cell = "1.19"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
wiremock = "0.6"
tower = "0.5"
http-body-util = "0.1"
hyper = "1.0"